@@ -11,12 +11,12 @@ import ru.practicum.shareit.user.mapper.UserMapper;
 import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceImplTest {
@@ -26,40 +26,81 @@ class UserServiceImplTest {
 
     @InjectMocks
     private UserServiceImpl userService;
-    private final Long userId = 1L;
-
-    private final User user = new User(
-            userId,
-            "userName",
-            "test@gmail.com");
-
-    private final UserDto userDto = UserMapper.INSTANCE.toUserDto(user);
 
     @Test
-    void getAllUsers() {
-        List<UserDto> users = (List.of(userDto));
+    void testGetAllUsers() {
+        List<User> users = Collections.singletonList(new User());
+        when(userRepository.findAll()).thenReturn(users);
 
-        when(userRepository.findAll()).thenReturn(List.of(user));
+        List<UserDto> result = userService.getAllUsers();
 
-        assertEquals(users, userService.getAllUsers());
+        assertNotNull(result);
+        assertEquals(1, result.size());
     }
 
     @Test
-    void getUserById() {
+    void testGetUserById() {
+        Long userId = 1L;
+        User user = new User();
+        user.setId(userId);
         when(userRepository.findById(userId)).thenReturn(Optional.of(user));
-        assertEquals(userDto, userService.getUserById(userId));
+
+        UserDto result = userService.getUserById(userId);
+
+        assertNotNull(result);
+        assertEquals(userId, result.getId());
     }
 
     @Test
-    void getByUserIdShouldThrowEntityNotFoundException() {
-        when(userRepository.findById(anyLong())).thenReturn(Optional.empty());
+    void testGetUserByIdNotFound() {
+        Long userId = 1L;
+        when(userRepository.findById(userId)).thenReturn(Optional.empty());
+
         assertThrows(NotFoundException.class, () -> userService.getUserById(userId));
     }
 
+    @Test
+    void testCreateUser() {
+        UserDto userDto = new UserDto();
+        userDto.setName("John Doe");
+        userDto.setEmail("johndoe@example.com");
+
+        User user = UserMapper.INSTANCE.toUser(userDto);
+        when(userRepository.save(any())).thenReturn(user);
+
+        UserDto result = userService.createUser(userDto);
+
+        assertNotNull(result);
+        assertEquals("John Doe", result.getName());
+        assertEquals("johndoe@example.com", result.getEmail());
+    }
 
     @Test
-    void deleteUser() {
-        assertDoesNotThrow(() -> userService.deleteUser(1L));
+    void testUpdateUser() {
+        Long userId = 1L;
+        UserDto userDto = new UserDto();
+        userDto.setName("Updated Name");
+
+        User existingUser = new User();
+        existingUser.setId(userId);
+        existingUser.setName("Old Name");
+
+        when(userRepository.findById(userId)).thenReturn(Optional.of(existingUser));
+        when(userRepository.saveAndFlush(any())).thenAnswer(invocation -> invocation.getArgument(0));
+
+        UserDto result = userService.updateUser(userId, userDto);
+
+        assertNotNull(result);
+        assertEquals(userId, result.getId());
+        assertEquals("Updated Name", result.getName());
+    }
+
+    @Test
+    void testDeleteUser() {
+        Long userId = 1L;
+        doNothing().when(userRepository).deleteById(userId);
+
+        assertDoesNotThrow(() -> userService.deleteUser(userId));
     }
 
 }
